--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: node_js
 node_js:
   - "0.10"
+  - "0.11"
+  - "0.12"
+  - "iojs"
+before_install:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 install:
   - npm install
 env:
   - TEST_SUITE=coveralls
   - TEST_SUITE=lint
+  - TEST_SUITE=test
 script: "npm run $TEST_SUITE"
