--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ready-mixin",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Ready mixin for classes with async constructor",
   "keywords": [
     "ready",
@@ -38,11 +38,11 @@
     "test:node": "istanbul test mocha -- --compilers js:babel/register --reporter spec test/*.js"
   },
   "dependencies": {
-    "babel-runtime": "^5.8.20",
-    "custom-promise-for-package": "0.0.1"
+    "babel-runtime": "^5.8.20"
   },
   "devDependencies": {
     "babel": "^5.8.21",
+    "babel-core": "^5.8.23",
     "babel-eslint": "^4.0.5",
     "babelify": "^6.1.3",
     "bluebird": "^2.9.34",
