--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ready-mixin",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Ready mixin for classes with async constructor",
   "keywords": [
     "ready",
@@ -47,6 +47,7 @@
     "babelify": "^6.1.3",
     "bluebird": "^2.9.34",
     "chai": "^3.2.0",
+    "core-decorators": "^0.7.0",
     "coveralls": "^2.11.3",
     "eslint": "^1.0.0",
     "eslint-config-standard": "^4.0.0",
